# pachi-py

./: .travis.yml  MANIFEST.in  Makefile  README.md  setup.py  tox.ini
pachi_py/: Makefile  __init__.py  cypachi.cpp  cypachi.h  cypachi.pyx  exceptions.hpp  extra_unused.pyx  goutil.cpp  goutil.hpp  ptr.hpp
pachi_py/pachi/: CMakeLists.txt  Makefile  board.c  board.h  libpachi_globals.c  ownermap.h
pachi_py/pachi/uct/: tree.c
tests/: play.py  test.py
